texting alignment issues in contact.css

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -67,6 +67,8 @@
 @media screen and (max-width: 600px) {
 
     .contact {
+        width: 90%;
+        text-align: center;
         margin: 0 auto;
         background: red;
     }
